syntax = "proto3";

import "google/protobuf/empty.proto";

package book;

option go_package = "./book/app/pb";

service BookService {
    rpc Get(BookParam) returns (BookList);
    rpc Create(BookRequest) returns (Book);
    rpc GetOne(BookId) returns (Book);
    rpc Update(Book) returns (Book);
    rpc Delete(BookId) returns (google.protobuf.Empty);
    rpc Borrow(BookId) returns (google.protobuf.Empty);
    rpc Return(BookId) returns (google.protobuf.Empty);
}

message Book {
    string id = 1;
    string title = 2;
    int32 pages = 3;
    string author_id = 4;
    string category_id = 5;
    int32 stock = 6;
}

message BookRequest {
    string title = 1;
    int32 pages = 2;
    string author_id = 3;
    string category_id = 4;
    int32 stock = 5;
}

message BookList {
    repeated Book book = 1;
}

message BookId {
    string id = 1;
}

message BookParam {
    string title = 1;
    bool random = 2;
}